xraylib/Acq.h

//////////////////////////////////////////////////////
// IMPORTANT:
// When implementing the XISL dll into a .net environment some datatypes might have to be changed to to size definition:
//
// e.g. 
// XISL dll: long has 4 byte
// .net: int has 4 byte, long has 8 byte
// so long has to be important as int
// 
// XISL dll: char has 1 byte
// .net: char has 2 bytes
//
//////////////////////////////////////////////////////

#define DATASHORT               2 //2 byte integer
#define DATALONG                4 //4 byte integer
#define DATAFLOAT               8 //8 byte double
#define DATASIGNED              16 // signed
/** 
* AcquisitionDesc defines a data structure that is 
* used by all functions of XISL. It contains all 
* required parameters for the acquisition.
* Access to the data fields is only possible via 
* the XISL API functions. HACQDESC defines a HANLDE to the acquisition descriptor.
* @see AcquisitionDesc
* @ingroup enum
**/
typedef HANDLE HACQDESC;
#define WINRESTSIZE					34
#define WINHARDWAREHEADERSIZE		32
#define WINRESTSIZE101				32
#define WINHARDWAREHEADERSIZEID15	2048
#define DETEKTOR_DATATYPE_18BIT 16
#define MAX_GREY_VALUE_18BIT  262144
#define __GBIF_Types
	#define GBIF_IP_MAC_NAME_CHAR_ARRAY_LENGTH		16
	#define GBIF_STRING_DATATYPE unsigned char
	#define GBIF_STRING_DATATYPE_ELTEC char
typedef struct
{	
	GBIF_STRING_DATATYPE	ucMacAddress[GBIF_IP_MAC_NAME_CHAR_ARRAY_LENGTH];			// unsigned since the adress components can be higher than 128
	GBIF_STRING_DATATYPE	ucIP[GBIF_IP_MAC_NAME_CHAR_ARRAY_LENGTH];
	GBIF_STRING_DATATYPE	ucSubnetMask[GBIF_IP_MAC_NAME_CHAR_ARRAY_LENGTH];
	GBIF_STRING_DATATYPE	ucGateway[GBIF_IP_MAC_NAME_CHAR_ARRAY_LENGTH];
	GBIF_STRING_DATATYPE	ucAdapterIP[GBIF_IP_MAC_NAME_CHAR_ARRAY_LENGTH];
	GBIF_STRING_DATATYPE	ucAdapterMask[GBIF_IP_MAC_NAME_CHAR_ARRAY_LENGTH];

	DWORD					dwIPCurrentBootOptions;
	CHAR 					cManufacturerName[32];										// PerkinElmer
	CHAR					cModelName[32];												// GBIF
	CHAR					cGBIFFirmwareVersion[32];
	CHAR					cDeviceName[16];

} GBIF_DEVICE_PARAM;
// 128Byte in total
typedef struct
{	
	char	cDetectorType[32];															// e.g. XRD 0822 AO 14
	char	cManufacturingDate[8];														// e.g. 201012
	char	cPlaceOfManufacture[8];														// e.g. DE
    char    cUniqueDeviceIdentifier[16];
    char    cDeviceIdentifier[16];
	char	cDummy[48];
} GBIF_Detector_Properties;
#define HIS_GbIF_IP 1
//*/

typedef struct
{
	DWORD	dwPROMID;
	DWORD	dwHeaderID;
	BOOL	bAddRow;
	BOOL	bPwrSave;
	DWORD	dwNrRows;
	DWORD	dwNrColumns;
	DWORD	dwZoomULRow;
	DWORD	dwZoomULColumn;
	DWORD	dwZoomBRRow;
	DWORD	dwZoomBRColumn;
	DWORD	dwFrmNrRows;
	DWORD	dwFrmRowType;
	DWORD	dwFrmFillRowIntervalls;
	DWORD	dwNrOfFillingRows;
	DWORD	dwDataType;
	DWORD	dwDataSorting;
	DWORD	dwTiming;
	DWORD	dwAcqMode;
	DWORD	dwGain;
	DWORD	dwOffset;
	DWORD	dwAccess;
	BOOL	bSyncMode;
	DWORD	dwBias;
	DWORD	dwLeakRows;
} CHwHeaderInfo;
typedef struct
{
	WORD	wHeaderID;		// 0
	WORD	wPROMID;		// 1
	WORD	wResolutionX;	// 2
	WORD	wResolutionY;	// 3
	WORD	wNrRows;		// 4
	WORD	wNrColumns;		// 5
	WORD	wZoomULRow;		// 6
	WORD	wZoomULColumn;	// 7
	WORD	wZoomBRRow;		// 8
	WORD	wZoomBRColumn;	// 9
	WORD	wFrmNrRows;		// A
	WORD	wFrmRowType;	// B
	WORD	wRowTime;		// C << 6
	WORD	wClock;			// D << 6
	WORD	wDataSorting;	// E
	WORD	wTiming;		// F
	WORD	wGain;			// 10
	WORD	wLeakRows;		// 11
	WORD	wAccess;		// 12
	WORD	wBias;			// 13
	WORD	wUgComp;		// 14
	WORD	wCameratype;	// 15
	WORD	wFrameCnt;		// 16
	WORD	wBinningMode;	// 17
	WORD	wRealInttime_milliSec;	// 18 
	WORD	wRealInttime_microSec;	// 19
	WORD	wStatus;		// 1A
	WORD	wCommand1;		// 1B
	WORD	wCommand2;		// 1C
	WORD	wCommand3;		// 1D
	WORD	wCommand4;		// 1E
	WORD	wDummy;			// 1F
}	CHwHeaderInfoEx;
typedef struct
{
	WORD FileType;			// File ID (0x7000)
	WORD HeaderSize;		// Size of this file header in Bytes
	WORD HeaderVersion;		// 100
    UINT FileSize;			// Size of the whole file in Bytes ( HeaderSize+ImageHeaderSize+Frames*rows*columns*datatypesize )
	WORD ImageHeaderSize;	// Size of the image header in Bytes
	WORD ULX, ULY, BRX, BRY;// bounding rectangle of the image
	WORD NrOfFrames;		// Nr of Frames in seq
	WORD Correction;		// 0 = none, 1 = offset, 2 = gain, 4 = bad pixel, (ored) can be 0
	double IntegrationTime;	// frame time in microseconds can by 0
	WORD TypeOfNumbers;		// refer to enum XIS_FileType
	BYTE x[WINRESTSIZE];		// fill up to 68 byte
} WinHeaderType;
typedef struct 
{
	WORD FileType;			// File ID (0x7000)
	WORD HeaderSize;		// Size of this file header in Bytes
	WORD HeaderVersion;		// 101
	UINT FileSize;			// Size of the whole file in Bytes ( HeaderSize+ImageHeaderSize+Frames*rows*columns*datatypesize )
	WORD ImageHeaderSize;	// Size of the image header in Bytes
	WORD ULX, ULY, BRX, BRY;// bounding rectangle of the image
	WORD NrOfFrames;		// Nr of Frames in seq
	WORD Correction;		// 0 = none, 1 = offset, 2 = gain, 4 = bad pixel, (ored) can be 0
	double IntegrationTime;	// frame time in microseconds
	WORD TypeOfNumbers;		// refer to enum XIS_FileType
	WORD wMedianValue;		// median of the image / can be 0. use 0 for onboard corrections. meadian for gain corr will be automatically calculated
	BYTE x[WINRESTSIZE101];	// fill up to 68 byte
} WinHeaderType101;
typedef struct 
{
	DWORD	dwPROMID;
	char	strProject[6];		// project / cam-nr
	char	strSystemused[3];	//
	char	strPrefilter[9];	// used filter
	float	fKVolt;				// 
	float	fAmpere;			//
	WORD	n_avframes;			// average count
		
} WinImageHeaderType;
typedef struct
{
	unsigned char	wTiming;		//	Timing und Triggermode
	unsigned char	wValue0;		// 
	unsigned char	wValue1;
	unsigned char	wValue2;
	unsigned char	wValue3;
	unsigned char	wValue4;
	unsigned char	wValue5;
	unsigned char	wValue6;
} FPGAType;					// 8 Byte werden bertragen
#define EPC_REGISTER_LENGTH      1024
typedef struct RTC_STRUCT {    
  DWORD year;    
  DWORD month;								// e.g.: 5 for may
  DWORD day;    
  DWORD hour;    
  DWORD minute;    
  DWORD second;    
   
}RTC_STRUCT;
 

typedef struct DETECTOR_BATTERY{    
  DWORD status; 							// D0: present
											// D1: charging
  DWORD serial_no;    
  DWORD cycle_count;    
  DWORD temperature;   						// e.g.: 2510 for 25.1 C 
  DWORD voltage;    						// in mV
  DWORD current;							// in mA (positive or negative)
  DWORD capacity;    						// in %
  DWORD energy;    							// in mWh
  DWORD charge;    							// in mAh
      
}DETECTOR_BATTERY;
 


typedef struct EPC_REGISTER {
  DWORD version;
  DWORD temperature_value[8];				// in 1/1000 C (e.g. 43000 for 43 C)
  DWORD temperature_warning_level[8];
  DWORD temperature_error_level[8];
  RTC_STRUCT rtc_value;
  DETECTOR_BATTERY battery;
  DWORD power_state;
  DWORD sdcard_state;						// D0: is mounted flag
  DWORD sdcard_usage;						// in %
  DWORD active_network_config;
  DWORD lan_status_register;				// D0: LAN enabled
											// D1: LAN up
											// D2: LAN used for image transfer
  DWORD wlan_status_register;				// D0: WLAN enabled
											// D1: WLAN up
											// D2: WLAN used for image transfer
											// D3: is accesspoint (0 for station)
											// D4: HT20 mode
											// D5: HT40+ mode
											// D6: HT40- mode
  DWORD signal_strength;					// in dBm
  DWORD channel;
  DWORD exam_flag;
  DWORD spartan_id;
  CHwHeaderInfoEx spartan_register;
  
}EPC_REGISTER;
/**
* @ingroup enum
*/
typedef enum XIS_FileType
{
	PKI_RESERVED = 1,
	PKI_DOUBLE = 2,
	PKI_SHORT = 4,
	PKI_SIGNED = 8,
	PKI_ERRORMAPONBOARD = 16,
	PKI_LONG = 32,
	PKI_SIGNEDSHORT = PKI_SHORT | PKI_SIGNED,
	PKI_SIGNEDLONG = PKI_LONG | PKI_SIGNED,
	PKI_FAULTMASK = PKI_LONG | PKI_RESERVED
} XIS_FileType;
HIS_RETURN Acquisition_VerifyGenuineness(HACQDESC hAcqDesc, char (*msg)[128], size_t *msg_len, unsigned char (*md)[20]);
HIS_RETURN Acquisition_SetPrivateKey(HACQDESC hAcqDesc, unsigned char (*key_old)[64], unsigned char (*key_new)[64]);