xraylib/Acq.cs

using System;
using System.Runtime.InteropServices;

namespace xraylib
{
    public class Acq
    {
        //////////////////////////////////////////////////////
        // IMPORTANT:
        // When implementing the XISL dll into a .net environment some datatypes might have to be changed to to size definition:
        //
        // e.g. 
        // XISL dll: long has 4 byte
        // .net: int has 4 byte, long has 8 byte
        // so long has to be important as int
        // 
        // XISL dll: char has 1 byte
        // .net: char has 2 bytes
        //
        //////////////////////////////////////////////////////

        /*
            #define DATASHORT               2 //2 byte integer
            #define DATALONG                4 //4 byte integer
            #define DATAFLOAT               8 //8 byte double
            #define DATASIGNED              16 // signed


            #define WINRESTSIZE					34
            #define WINHARDWAREHEADERSIZE		32
            #define WINRESTSIZE101				32
            #define WINHARDWAREHEADERSIZEID15	2048
            #define DETEKTOR_DATATYPE_18BIT 16
            #define MAX_GREY_VALUE_18BIT  262144

            #define __GBIF_Types
	        #define GBIF_IP_MAC_NAME_CHAR_ARRAY_LENGTH		16
	        #define GBIF_STRING_DATATYPE Byte
	        #define GBIF_STRING_DATATYPE_ELTEC char

        */



        public const int WINRESTSIZE = 34;
        public const int WINHARDWAREHEADERSIZE = 32;
        public const int WINRESTSIZE101 = 32;
        public const int WINHARDWAREHEADERSIZEID15 = 2048;
        public const int DETEKTOR_DATATYPE_18BIT = 16;
        public const int AX_GREY_VALUE_18BIT = 262144;
        public const int GBIF_IP_MAC_NAME_CHAR_ARRAY_LENGTH = 16;

        [StructLayout(LayoutKind.Sequential, Pack = 1, CharSet = CharSet.Ansi)]
        public struct GBIF_DEVICE_PARAM
        {
            [MarshalAsAttribute(UnmanagedType.ByValTStr, SizeConst = GBIF_IP_MAC_NAME_CHAR_ARRAY_LENGTH)]
            string ucMacAddress;          // unsigned since the adress components can be higher than 128

            [MarshalAsAttribute(UnmanagedType.ByValTStr, SizeConst = GBIF_IP_MAC_NAME_CHAR_ARRAY_LENGTH)]
            string ucIP;

            [MarshalAsAttribute(UnmanagedType.ByValTStr, SizeConst = GBIF_IP_MAC_NAME_CHAR_ARRAY_LENGTH)]
            string ucSubnetMask;

            [MarshalAsAttribute(UnmanagedType.ByValTStr, SizeConst = GBIF_IP_MAC_NAME_CHAR_ARRAY_LENGTH)]
            string ucGateway;

            [MarshalAsAttribute(UnmanagedType.ByValTStr, SizeConst = GBIF_IP_MAC_NAME_CHAR_ARRAY_LENGTH)]
            string ucAdapterIP;

            [MarshalAsAttribute(UnmanagedType.ByValTStr, SizeConst = GBIF_IP_MAC_NAME_CHAR_ARRAY_LENGTH)]
            string ucAdapterMask;

            int dwIPCurrentBootOptions;

            [MarshalAsAttribute(UnmanagedType.ByValTStr, SizeConst = 32)]
            string cManufacturerName;                                     // PerkinElmer

            [MarshalAsAttribute(UnmanagedType.ByValTStr, SizeConst = 32)]
            string cModelName;                                                // GBIF

            [MarshalAsAttribute(UnmanagedType.ByValTStr, SizeConst = 32)]
            string cGBIFFirmwareVersion;

            [MarshalAsAttribute(UnmanagedType.ByValTStr, SizeConst = 16)]
            string cDeviceName;
        }

        [StructLayout(LayoutKind.Sequential, Pack = 1, CharSet = CharSet.Ansi)]
        public struct GBIF_Detector_Properties
        {
            [MarshalAsAttribute(UnmanagedType.ByValTStr, SizeConst = 32)]
            string cDetectorType;      // e.g. XRD 0822 AO 14

            [MarshalAsAttribute(UnmanagedType.ByValTStr, SizeConst = 8)]
            string cManufacturingDate;                                                     // e.g. 201012

            [MarshalAsAttribute(UnmanagedType.ByValTStr, SizeConst = 8)]
            string cPlaceOfManufacture;
            // e.g. DE
            [MarshalAsAttribute(UnmanagedType.ByValTStr, SizeConst = 16)]
            string cUniqueDeviceIdentifier;

            [MarshalAsAttribute(UnmanagedType.ByValTStr, SizeConst = 16)]
            string cDeviceIdentifier;

            [MarshalAsAttribute(UnmanagedType.ByValTStr, SizeConst = 48)]
            string cDummy;
        }

        public enum HIS_GbIF : uint
        {
            FIRST_CAM = 0,
            IP = 1,
            MAC = 2,
            NAME = 3
        }

        public enum HIS_GbIF_IP : uint
        {
            STATIC = 1,
            DHCP = 2,
            LLA = 4
        }

        [StructLayout(LayoutKind.Sequential, Pack = 1, CharSet = CharSet.Ansi)]
        public struct CHwHeaderInfo
        {
            int dwPROMID;
            int dwHeaderID;
            bool bAddRow;
            bool bPwrSave;
            int dwNrRows;
            int dwNrColumns;
            int dwZoomULRow;
            int dwZoomULColumn;
            int dwZoomBRRow;
            int dwZoomBRColumn;
            int dwFrmNrRows;
            int dwFrmRowType;
            int dwFrmFillRowIntervalls;
            int dwNrOfFillingRows;
            int dwDataType;
            int dwDataSorting;
            int dwTiming;
            int dwAcqMode;
            int dwGain;
            int dwOffset;
            int dwAccess;
            bool bSyncMode;
            int dwBias;
            int dwLeakRows;
        }

        [StructLayout(LayoutKind.Sequential, Pack = 1, CharSet = CharSet.Ansi)]
        public struct CHwHeaderInfoEx
        {
            ushort wHeaderID;     // 0
            ushort wPROMID;       // 1
            ushort wResolutionX;  // 2
            ushort wResolutionY;  // 3
            ushort wNrRows;       // 4
            ushort wNrColumns;        // 5
            ushort wZoomULRow;        // 6
            ushort wZoomULColumn; // 7
            ushort wZoomBRRow;        // 8
            ushort wZoomBRColumn; // 9
            ushort wFrmNrRows;        // A
            ushort wFrmRowType;   // B
            ushort wRowTime;      // C << 6
            ushort wClock;            // D << 6
            ushort wDataSorting;  // E
            ushort wTiming;       // F
            ushort wGain;         // 10
            ushort wLeakRows;     // 11
            ushort wAccess;       // 12
            ushort wBias;         // 13
            ushort wUgComp;       // 14
            ushort wCameratype;   // 15
            ushort wFrameCnt;     // 16
            ushort wBinningMode;  // 17
            ushort wRealInttime_milliSec; // 18 
            ushort wRealInttime_microSec; // 19
            ushort wStatus;       // 1A
            ushort wCommand1;     // 1B
            ushort wCommand2;     // 1C
            ushort wCommand3;     // 1D
            ushort wCommand4;     // 1E
            ushort wDummy;			// 1F
        }

        [StructLayout(LayoutKind.Sequential, Pack = 1, CharSet = CharSet.Ansi)]
        public struct WinHeaderType
        {

            ushort FileType;          // File ID (0x7000)
            ushort HeaderSize;        // Size of this file header in Bytes
            ushort HeaderVersion;     // 100
            uint FileSize;          // Size of the whole file in Bytes ( HeaderSize+ImageHeaderSize+Frames*rows*columns*datatypesize )
            ushort ImageHeaderSize;   // Size of the image header in Bytes
            ushort ULX, ULY, BRX, BRY;// bounding rectangle of the image
            ushort NrOfFrames;        // Nr of Frames in seq
            ushort Correction;        // 0 = none, 1 = offset, 2 = gain, 4 = bad pixel, (ored) can be 0
            double IntegrationTime; // frame time in microseconds can by 0
            ushort TypeOfNumbers;     // refer to enum XIS_FileType
            [MarshalAsAttribute(UnmanagedType.ByValTStr, SizeConst = WINRESTSIZE)]
            string x;        // fill up to 68 byte
        }




        [StructLayout(LayoutKind.Sequential, Pack = 1, CharSet = CharSet.Ansi)]
        public struct WinHeaderType101
        {

            ushort FileType;          // File ID (0x7000)
            ushort HeaderSize;        // Size of this file header in Bytes
            ushort HeaderVersion;     // 101
            uint FileSize;          // Size of the whole file in Bytes ( HeaderSize+ImageHeaderSize+Frames*rows*columns*datatypesize )
            ushort ImageHeaderSize;   // Size of the image header in Bytes
            ushort ULX, ULY, BRX, BRY;// bounding rectangle of the image
            ushort NrOfFrames;        // Nr of Frames in seq
            ushort Correction;        // 0 = none, 1 = offset, 2 = gain, 4 = bad pixel, (ored) can be 0
            double IntegrationTime; // frame time in microseconds
            ushort TypeOfNumbers;     // refer to enum XIS_FileType
            ushort wMedianValue;      // median of the image / can be 0. use 0 for onboard corrections. meadian for gain corr will be automatically calculated
            [MarshalAsAttribute(UnmanagedType.ByValTStr, SizeConst = WINRESTSIZE101)]
            string x; // fill up to 68 byte
        }

        [StructLayout(LayoutKind.Sequential, Pack = 1, CharSet = CharSet.Ansi)]
        public struct WinImageHeaderType
        {

            uint dwPROMID;
            [MarshalAsAttribute(UnmanagedType.ByValTStr, SizeConst = 6)]
            string strProject;     // project / cam-nr

            [MarshalAsAttribute(UnmanagedType.ByValTStr, SizeConst = 3)]
            string strSystemused;  //

            [MarshalAsAttribute(UnmanagedType.ByValTStr, SizeConst = 9)]
            string strPrefilter;   // used filter
            float fKVolt;               // 
            float fAmpere;          //
            ushort n_avframes;          // average count

        }

        [StructLayout(LayoutKind.Sequential, Pack = 1, CharSet = CharSet.Ansi)]
        public struct FPGAType
        {

            byte wTiming;      //	Timing und Triggermode
            byte wValue0;      // 
            byte wValue1;
            byte wValue2;
            byte wValue3;
            byte wValue4;
            byte wValue5;
            byte wValue6;
        }           // 8 Byte werden bertragen


        public static uint EPC_REGISTER_LENGTH = 1024;

        [StructLayout(LayoutKind.Sequential, Pack = 1, CharSet = CharSet.Ansi)]
        public struct RTC_STRUCT
        {
            uint year;
            uint month;                                // e.g.: 5 for may
            uint day;
            uint hour;
            uint minute;
            uint second;

        }

        [StructLayout(LayoutKind.Sequential, Pack = 1, CharSet = CharSet.Ansi)]
        public struct DETECTOR_BATTERY
        {
            uint status;                           // D0: present
                                                   // D1: charging
            uint serial_no;
            uint cycle_count;
            uint temperature;                          // e.g.: 2510 for 25.1 C 
            uint voltage;                          // in mV
            uint current;                          // in mA (positive or negative)
            uint capacity;                         // in %
            uint energy;                               // in mWh
            uint charge;                               // in mAh

        }

        [StructLayout(LayoutKind.Sequential, Pack = 1, CharSet = CharSet.Ansi)]
        public struct EPC_REGISTER
        {
            uint version;
            [MarshalAs(UnmanagedType.ByValArray, SizeConst = 8)]
            uint[] temperature_value;             // in 1/1000 C (e.g. 43000 for 43 C)

            [MarshalAs(UnmanagedType.ByValArray, SizeConst = 8)]
            uint[] temperature_warning_level;

            [MarshalAs(UnmanagedType.ByValArray, SizeConst = 8)]
            uint[] temperature_error_level;
